--- a/Tic Tac Toe.ipynb
+++ b/Tic Tac Toe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4e257d0f",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5f187f8d",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "1d56b4c3",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e16b00f8",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "c9321b9e",
    "metadata": {},
    "outputs": [],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "5295b8e6",
    "metadata": {},
    "outputs": [],
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c19eabf9",
    "metadata": {},
    "outputs": [],
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "9a01b899",
    "metadata": {},
    "outputs": [],
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "55bbbe31",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "c4fe6e60",
    "metadata": {},
    "outputs": [],
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "0f653eae",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "f36da2b0",
    "metadata": {},
    "outputs": [],
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "166bdaeb",
    "metadata": {},
    "outputs": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "e989a670",
    "metadata": {},
    "outputs": [
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "e6901fe2",
    "metadata": {
     "scrolled": true
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "49e72b05",
    "metadata": {},
    "outputs": [],
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "c4126277",
    "metadata": {},
    "outputs": [],
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "6cbb5904",
    "metadata": {},
    "outputs": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "81b4a434",
    "metadata": {},
    "outputs": [],
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "fe82c448",
    "metadata": {},
    "outputs": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "0504af10",
    "metadata": {},
    "outputs": [],
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "29edfdc6",
    "metadata": {},
    "outputs": [
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "1be7921f",
    "metadata": {},
    "outputs": [],
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "f58225b0",
    "metadata": {},
    "outputs": [
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "c9342f9f",
    "metadata": {},
    "outputs": [],
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "cef341a4",
    "metadata": {
     "scrolled": true
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "aa50bb3d",
    "metadata": {},
    "outputs": [],
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "f3a29813",
    "metadata": {},
    "outputs": [
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "302dca5f",
    "metadata": {},
    "outputs": [],
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "0050924b",
    "metadata": {},
    "outputs": [
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "4d421bf7",
    "metadata": {},
    "outputs": [],
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "c48929b4",
    "metadata": {},
    "outputs": [],
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "3fa7b382",
    "metadata": {},
    "outputs": [],
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "3e9656ff",
    "metadata": {},
    "outputs": [
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "a52e6706",
    "metadata": {},
    "outputs": [],
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "dec63633",
    "metadata": {},
    "outputs": [],
@@ -1130,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "b1c8c20c",
    "metadata": {},
    "outputs": [],
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "f700358b",
    "metadata": {},
    "outputs": [
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "9eba265c",
    "metadata": {},
    "outputs": [],
@@ -1188,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "081f8cb9",
    "metadata": {},
    "outputs": [
@@ -1523,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "3971677f",
    "metadata": {},
    "outputs": [],
@@ -1553,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "dacb4fe8",
    "metadata": {},
    "outputs": [
@@ -1893,7 +1893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "f9dbf4d1",
    "metadata": {},
    "outputs": [
@@ -2227,11 +2227,49 @@
     "move_data_refined = move_data_refined.sort_values(by = [\"Sequence\"], ignore_index = True)\n",
     "move_data_refined"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3f59f73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def to_string(val):\n",
+    "    val = str(val)\n",
+    "    return val\n",
+    "\n",
+    "def to_integer(val):\n",
+    "    val = int(val)\n",
+    "    return val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c7d632c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "move_data[\"Sequence\"] = move_data[\"Sequence\"].map(to_string)\n",
+    "move_data[\"Move6\"] = move_data[\"Sequence\"].str[5]\n",
+    "move_data[\"Move7\"] = move_data[\"Sequence\"].str[6]\n",
+    "move_data[\"Move8\"] = move_data[\"Sequence\"].str[7]\n",
+    "move_data[\"Move9\"] = move_data[\"Sequence\"].str[8]\n",
+    "move_data[\"Sequence\"] = move_data[\"Sequence\"].map(to_integer)\n",
+    "move_data[\"Move6\"] = move_data[\"Move6\"].map(to_integer)\n",
+    "move_data[\"Move7\"] = move_data[\"Move7\"].map(to_integer)\n",
+    "move_data[\"Move8\"] = move_data[\"Move8\"].map(to_integer)\n",
+    "move_data[\"Move9\"] = move_data[\"Move9\"].map(to_integer)"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "04512616f5daa25e132e9ee4f80fa0e49bd5f1aa99310649ea722cc6d81533de"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
